--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "@mui/system": "^6.4.3",
     "axios": "^1.7.9",
     "framer-motion": "^12.9.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
